manifest/objects/Five9__Five9Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Five9 Call Center integration settings</description>
    <fields>
        <fullName>Five9__AdminWS_Password__c</fullName>
        <description>Five9 administrator account password</description>
        <label>AdminWS Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__AdminWS_ReportEmail__c</fullName>
        <description>Email Five9 Admin Web Services will send reports to</description>
        <label>AdminWS ReportEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__AdminWS_URL__c</fullName>
        <description>Five9 Admin Web Services endpoint</description>
        <label>AdminWS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__AdminWS_Username__c</fullName>
        <description>Five9 Admin Web Services administrator account username</description>
        <label>AdminWS Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Callback_CompletedStatus__c</fullName>
        <label>Callback_CompletedStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Callback_SynchEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callback_SynchEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Check_Future_Method_Invocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if future from future method invocation should raise exception</description>
        <label>Check Future Method Invocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Codebase__c</fullName>
        <description>Five9 integrations codebase</description>
        <label>Codebase</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Custom_Search_Class_Name__c</fullName>
        <description>Custom Search class name</description>
        <label>Custom_Search_Class_Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Five9__InstallationCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is initially to false and then to true after the installation is completed</description>
        <label>InstallationCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__LM_UseOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Outbound messages are used for list synchronization</description>
        <label>LM Use Outbound Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Screenpop_ANI_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Perform search by ANI during screenpop</description>
        <label>Screenpop ANI Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Screenpop_C2D_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenpop C2D Search</label>
        <type>Checkbox</type>
    </fields>
    <label>Five9Settings</label>
</CustomObject>